{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 693,
  "lineage": "9d72d61c-430b-8891-177a-857683e9b0d3",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend",
      "provider": "provider.google-beta",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/coen-josef-ibrahim/zones/europe-west3-a/instanceGroups/sandbox-instance-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2021-07-02T01:50:29.846-07:00",
            "enable_cdn": false,
            "fingerprint": "dJhgimvSWfM=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/coen-josef-ibrahim/global/healthChecks/sandbox-health-check"
            ],
            "id": "projects/coen-josef-ibrahim/global/backendServices/sandbox-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "sandbox-backend",
            "port_name": "https",
            "project": "coen-josef-ibrahim",
            "protocol": "HTTPS",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coen-josef-ibrahim/global/backendServices/sandbox-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "depends_on": [
            "google_compute_health_check.https_health_check",
            "google_compute_instance_group.instance_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "lb",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-07-02T01:50:06.142-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/coen-josef-ibrahim/global/firewalls/sandbox-lb",
            "log_config": [],
            "name": "sandbox-lb",
            "network": "https://www.googleapis.com/compute/v1/projects/coen-josef-ibrahim/global/networks/sandbox-network",
            "priority": 1000,
            "project": "coen-josef-ibrahim",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coen-josef-ibrahim/global/firewalls/sandbox-lb",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "lb"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-07-02T01:50:06.122-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/coen-josef-ibrahim/global/firewalls/sandbox-ssh",
            "log_config": [],
            "name": "sandbox-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/coen-josef-ibrahim/global/networks/sandbox-network",
            "priority": 1000,
            "project": "coen-josef-ibrahim",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coen-josef-ibrahim/global/firewalls/sandbox-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.149.74.218",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-07-02T01:49:28.627-07:00",
            "id": "projects/coen-josef-ibrahim/global/addresses/global-address",
            "name": "global-address",
            "prefix_length": 0,
            "project": "coen-josef-ibrahim",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coen-josef-ibrahim/global/addresses/global-address"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/coen-josef-ibrahim/global/forwardingRules/sandbox-https-forwarding-rule",
            "ip_address": "34.149.74.218",
            "ip_protocol": "TCP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "sandbox-https-forwarding-rule",
            "port_range": "443-443",
            "project": "coen-josef-ibrahim",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coen-josef-ibrahim/global/forwardingRules/sandbox-https-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/coen-josef-ibrahim/global/targetHttpsProxies/sandbox-https-proxy"
          },
          "depends_on": [
            "google_compute_global_address.default",
            "google_compute_target_https_proxy.https-proxy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/coen-josef-ibrahim/global/forwardingRules/sandbox-http-forwarding-rule",
            "ip_address": "34.149.74.218",
            "ip_protocol": "TCP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "sandbox-http-forwarding-rule",
            "port_range": "80-80",
            "project": "coen-josef-ibrahim",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coen-josef-ibrahim/global/forwardingRules/sandbox-http-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/coen-josef-ibrahim/global/targetHttpProxies/sandbox-http-proxy"
          },
          "depends_on": [
            "google_compute_global_address.default",
            "google_compute_target_http_proxy.http-proxy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20210623",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/coen-josef-ibrahim/zones/europe-west3-a/disks/sandbox-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/coen-josef-ibrahim/zones/europe-west3-a/instances/sandbox-vm",
            "instance_id": "5453421988694683088",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "3u_N0AjeKCM=",
            "metadata_startup_script": "#!/bin/bash\n\n#update\nsudo apt-get update\n\n#isntall nginx, mysql and php\nsudo apt-get install nginx mysql-server php-fpm php-mysql -y\n\n#config php\nsudo mkdir /var/www/wordpress\nsudo chown -R $USER:$USER /var/www/your_domain\n\n# ssl\n## Create the SSL Certificate\nsudo openssl req -x509 -nodes -subj \"/CN=Sandbox/\" -days 365 -newkey rsa:2048 -keyout /etc/ssl/private/nginx-selfsigned.key -out /etc/ssl/certs/nginx-selfsigned.crt\nsudo openssl dhpar [...]
            "name": "sandbox-vm",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/coen-josef-ibrahim/global/networks/sandbox-network",
                "network_ip": "10.156.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/coen-josef-ibrahim/regions/europe-west3/subnetworks/sandbox-network",
                "subnetwork_project": "coen-josef-ibrahim"
              }
            ],
            "project": "coen-josef-ibrahim",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/coen-josef-ibrahim/zones/europe-west3-a/instances/sandbox-vm",
            "service_account": [
              {
                "email": "wordpress@coen-josef-ibrahim.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "lb",
              "ssh"
            ],
            "tags_fingerprint": "OhLcfqEODCM=",
            "zone": "europe-west3-a"
          },
          "depends_on": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/coen-josef-ibrahim/global/networks/sandbox-network",
            "name": "sandbox-network",
            "project": "coen-josef-ibrahim",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coen-josef-ibrahim/global/networks/sandbox-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-07-02T01:50:06.317-07:00",
            "id": "projects/coen-josef-ibrahim/regions/europe-west3/routers/wp-router",
            "name": "wp-router",
            "network": "https://www.googleapis.com/compute/v1/projects/coen-josef-ibrahim/global/networks/sandbox-network",
            "project": "coen-josef-ibrahim",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coen-josef-ibrahim/regions/europe-west3/routers/wp-router"
          },
          "depends_on": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "coen-josef-ibrahim/europe-west3/wp-router/wp-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "min_ports_per_vm": 0,
            "name": "wp-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "coen-josef-ibrahim",
            "region": "europe-west3",
            "router": "wp-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "depends_on": [
            "google_compute_router.router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http-proxy",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-07-02T03:03:22.223-07:00",
            "id": "projects/coen-josef-ibrahim/global/targetHttpProxies/sandbox-http-proxy",
            "name": "sandbox-http-proxy",
            "project": "coen-josef-ibrahim",
            "proxy_id": 6888984837100886661,
            "self_link": "https://www.googleapis.com/compute/v1/projects/coen-josef-ibrahim/global/targetHttpProxies/sandbox-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/coen-josef-ibrahim/global/urlMaps/sandbox-http-redirect"
          },
          "depends_on": [
            "google_compute_url_map.http-redirect"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "https-proxy",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-07-02T01:50:56.620-07:00",
            "id": "projects/coen-josef-ibrahim/global/targetHttpsProxies/sandbox-https-proxy",
            "name": "sandbox-https-proxy",
            "project": "coen-josef-ibrahim",
            "proxy_id": 2687811874429562271,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coen-josef-ibrahim/global/targetHttpsProxies/sandbox-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/coen-josef-ibrahim/global/sslCertificates/sandbox-ssl-certificate"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/coen-josef-ibrahim/global/urlMaps/sandbox-url-map"
          },
          "depends_on": [
            "google_compute_managed_ssl_certificate.default",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "http-redirect",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-07-02T04:30:21.927-07:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "MOVED_PERMANENTLY_DEFAULT",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "cVsOVESvuBQ=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/coen-josef-ibrahim/global/urlMaps/sandbox-http-redirect",
            "map_id": 4908315850566747682,
            "name": "sandbox-http-redirect",
            "path_matcher": [],
            "project": "coen-josef-ibrahim",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coen-josef-ibrahim/global/urlMaps/sandbox-http-redirect",
            "test": [],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-07-02T01:50:52.858-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/coen-josef-ibrahim/global/backendServices/sandbox-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "m8vFtesIhDQ=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/coen-josef-ibrahim/global/urlMaps/sandbox-url-map",
            "map_id": 856441126539980163,
            "name": "sandbox-url-map",
            "path_matcher": [],
            "project": "coen-josef-ibrahim",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coen-josef-ibrahim/global/urlMaps/sandbox-url-map",
            "test": [],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_backend_service.backend"
          ]
        }
      ]
    }
  ]
}